--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,9 @@
 name: fastapi-app
 
 on:
-  push:
-    branches:
-      - main
-      - Feature/**
   pull_request:
     branches:
-      - main
+      - main    
 
 jobs:
   test:
@@ -28,13 +24,10 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Linter (flake8)
-        run: |
-          source venv/bin/activate
-          pip install flake8
-          flake8 . --ignore=E501
-
       - name: Run tests
         run: | 
           source venv/bin/activate
-          pytest --maxfail=1 --disable-warnings --timeout=30 || exit 1
+          pytest --maxfail=1 --disable-warnings
+
+
+  
