--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,19 @@
 name: fastapi-app
 
 on:
+  push:
+    branches:
+      - main
+      - Feature/**
   pull_request:
     branches:
-      - main    
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 10  # Ensures job fails if it runs too long
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -20,14 +26,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m venv venv
-          source venv/bin/activate
-          pip install --upgrade pip
-          pip install -r requirements.txt
+          venv/bin/python -m pip install --upgrade pip
+          venv/bin/python -m pip install -r requirements.txt
+
+      - name: Run Linter (flake8)
+        run: |
+          venv/bin/python -m pip install flake8
+          venv/bin/python -m flake8 . --ignore=E501
 
       - name: Run tests
-        run: | 
-          source venv/bin/activate
-          pytest --maxfail=1 --disable-warnings
-
-
-  
+        run: |
+          venv/bin/python -m pytest --maxfail=1 --disable-warnings --timeout=30 || exit 1
