--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,9 @@ jobs:
 
       - name: Run Linter (flake8)
         run: |
-          venv/bin/python -m pip install flake8
-          venv/bin/python -m flake8 . --ignore=E501
+          source venv/bin/activate
+          pip install flake8
+          flake8 . --exclude=venv --ignore=E501,W503,E203,E701,E704
 
       - name: Run tests
         run: |
